--- a/puppet/services/neutron-plugin-ml2-fujitsu-cfab.yaml
+++ b/puppet/services/neutron-plugin-ml2-fujitsu-cfab.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2017-02-24
+heat_template_version: ocata
 
 description: >
   Configure hieradata for Fujitsu C-Fabric plugin configuration
