Add ReNo support
Add ReNo support to manage release notes.
http://docs.openstack.org/developer/reno/

Change-Id: Ie5154d909e616e4e7e813052f9c121d6ac5b0875

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ puppet/compute-config.yaml
 puppet/controller-config.yaml
 puppet/objectstorage-config.yaml
 puppet/post.yaml
+
+# Files created by releasenotes build
+releasenotes/build
