--- a/tox.ini
+++ b/tox.ini
@@ -17,3 +17,6 @@ commands =
 
 [testenv:templates]
 commands = python ./tools/process-templates.py
+
+[testenv:releasenotes]
+commands = bash -c tools/releasenotes_tox.sh
