Use custom role names in deployed-server roles
Custom role names need to be used in the deployed server role files,
otherwise the new customized roles are not generated by jinja since the
default roles are excluded from templating in j2_excludes.yaml.

This patch also removes the OS::TripleO::Services::Core service that was
recently removed from the default Controller role as well in
I48cd2b6a4593d673d5883b45feae088392e7e713

Partially-implements: blueprint split-stack-software-configuration
Change-Id: I60cb60382d472cd093f07e134245f666029f3b16

--- a/deployed-server/deployed-server-roles-data.yaml
+++ b/deployed-server/deployed-server-roles-data.yaml
@@ -21,7 +21,7 @@
 # on the role, defaults to an empty list. Sets the default for the
 # {{role.name}}Services parameter in overcloud.yaml
 
-- name: Controller
+- name: ControllerDeployedServer
   CountDefault: 1
   disable_constraints: True
   ServicesDefault:
@@ -33,7 +33,6 @@
     - OS::TripleO::Services::CinderBackup
     - OS::TripleO::Services::CinderScheduler
     - OS::TripleO::Services::CinderVolume
-    - OS::TripleO::Services::Core
     - OS::TripleO::Services::Kernel
     - OS::TripleO::Services::Keystone
     - OS::TripleO::Services::GlanceApi
@@ -103,7 +102,7 @@
     - OS::TripleO::Services::Zaqar
     - OS::TripleO::Services::OVNDBs
 
-- name: Compute
+- name: ComputeDeployedServer
   CountDefault: 1
   HostnameFormatDefault: '%stackname%-novacompute-%index%'
   disable_constraints: True
@@ -129,7 +128,7 @@
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
 
-- name: BlockStorage
+- name: BlockStorageDeployedServer
   disable_constraints: True
   ServicesDefault:
     - OS::TripleO::Services::CACerts
@@ -143,7 +142,7 @@
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
 
-- name: ObjectStorage
+- name: ObjectStorageDeployedServer
   disable_constraints: True
   ServicesDefault:
     - OS::TripleO::Services::CACerts
@@ -158,7 +157,7 @@
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
 
-- name: CephStorage
+- name: CephStorageDeployedServer
   disable_constraints: True
   ServicesDefault:
     - OS::TripleO::Services::CACerts
