Fix typo in template description
The DeployedServerPortMap parameter actually joins the hostname and
network name with a dash, not an underscore. This commit just fixes the
template description for documentation purproses.

Change-Id: Iea874e090bc615fd56b07e327465d093bcb0df9c

--- a/deployed-server/deployed-neutron-port.yaml
+++ b/deployed-server/deployed-neutron-port.yaml
@@ -8,7 +8,7 @@ description: "
   Example:
     parameter_defaults:
       DeployedServerPortMap:
-        gatsby_ctlplane:
+        gatsby-ctlplane:
           fixed_ips:
             - ip_address: 127.0.0.1
           subnets:
