Add AuditD composable service
This patch allows the management of the AuditD service and its associated
files (such as `audit.rules`)

This is achieved by means of the `puppet-auditd` puppet module.

Also places ssh banner capabilities map on top of patch

Change-Id: Ib8bb52dde88304cb58b051bced9779c97a314d0d
Depends-On: Ie31c063b674075e35e1bfa28d1fc07f3f897407b

--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -541,11 +541,27 @@ topics:
   - title: Security Options
     description: Security Hardening Options
     environment_groups:
+      - title: SSH Banner Text
+        description: Enables population of SSH Banner Text
+        environments:
+          - file: environments/sshd-banner.yaml
+            title: SSH Banner Text
+            description:
+            requires:
+              - overcloud-resource-registry-puppet.yaml
       - title: Horizon Password Validation
         description: Enable Horizon Password validation
         environments:
           - file: environments/horizon_password_validation.yaml
             title: Horizon Password Validation
+            description:
+            requires:
+              - overcloud-resource-registry-puppet.yaml
+      - title: AuditD Rules
+        description:  Management of AuditD rules
+        environments:
+          - file: environments/auditd.yaml
+            title: AuditD Rule Management
             description:
             requires:
               - overcloud-resource-registry-puppet.yaml
