--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -112,6 +112,7 @@
     - OS::TripleO::Services::NeutronML2FujitsuFossw
     - OS::TripleO::Services::CinderHPELeftHandISCSI
     - OS::TripleO::Services::Etcd
+    - OS::TripleO::Services::AuditD
 
 - name: Compute
   CountDefault: 1
@@ -139,6 +140,7 @@
     - OS::TripleO::Services::OpenDaylightOvs
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
+    - OS::TripleO::Services::AuditD
 
 - name: BlockStorage
   ServicesDefault:
@@ -153,6 +155,7 @@
     - OS::TripleO::Services::TripleoFirewall
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
+    - OS::TripleO::Services::AuditD
 
 - name: ObjectStorage
   disable_upgrade_deployment: True
@@ -169,6 +172,7 @@
     - OS::TripleO::Services::TripleoFirewall
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
+    - OS::TripleO::Services::AuditD
 
 - name: CephStorage
   disable_upgrade_deployment: True
@@ -184,3 +188,4 @@
     - OS::TripleO::Services::TripleoFirewall
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
+    - OS::TripleO::Services::AuditD
