--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -431,6 +431,11 @@ topics:
             title: Cinder iSER backend
             description: >
               Enable a Cinder iSER RDMA backend, configured via puppet
+          - file: environments/cinder-scaleio-config.yaml
+            title: Cinder Dell EMC ScaleIO backend
+            description: >
+              Enables a Cinder Dell EMC ScaleIO backend,
+              configured via puppet
             requires:
               - overcloud-resource-registry-puppet.yaml
       - title: Externally managed Ceph
