Add entry in serviceNetMap for Nova Placement
This is needed for t-h-t to autogenerate the hostnames and the vip
entries in hiera. It also takes it into use in the endpoint map.

Change-Id: Id0d34c7c3939ee81126ffd26d0658c0a87805a44

--- a/network/service_net_map.j2.yaml
+++ b/network/service_net_map.j2.yaml
@@ -42,6 +42,7 @@ parameters:
       HeatApiCfnNetwork: internal_api
       HeatApiCloudwatchNetwork: internal_api
       NovaApiNetwork: internal_api
+      NovaPlacementNetwork: internal_api
       NovaMetadataNetwork: internal_api
       NovaVncProxyNetwork: internal_api
       SwiftStorageNetwork: storage_mgmt
