Disable glance registry during upgrade
Change-Id: I447ce74cca93fcae87ca608ecc8eeb2721fecefb

--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -109,6 +109,9 @@ outputs:
         - name: Stop glance_api service
           tags: step2
           service: name=openstack-glance-api state=stopped
+        - name: Stop and disable glance registry (removed for Ocata)
+          tags: step2
+          service: name=openstack-glance-registry state=stopped enabled=no
         - name: Sync glance_api DB
           tags: step5
           command: glance-manage --config-file=/etc/glance/glance-api.conf db_sync
