Swift proxy align *-quotas with puppet-swift syntax
puppet-swift has hard-coded sections which expect these to be
*_quotas, without matching the pipeline to the sections swift
proxy fails to start.

Change-Id: I3ee94a9bc4b046051e5d814e82a69f759bea1296
Closes-Bug: #1657167

--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -119,8 +119,8 @@ outputs:
                   - 'keystone'
                   - 'staticweb'
                   - 'copy'
-                  - 'container-quotas'
-                  - 'account-quotas'
+                  - 'container_quotas'
+                  - 'account_quotas'
                   - 'slo'
                   - 'dlo'
                   - 'versioned_writes'
