--- a/puppet/services/cinder-base.yaml
+++ b/puppet/services/cinder-base.yaml
@@ -119,3 +119,4 @@ outputs:
         cinder::cron::db_purge::user: {get_param: CinderCronDbPurgeUser}
         cinder::cron::db_purge::age: {get_param: CinderCronDbPurgeAge}
         cinder::cron::db_purge::destination: {get_param: CinderCronDbPurgeDestination}
+        cinder::glance::glance_api_servers: {get_param: [EndpointMap, GlanceInternal, uri]}
