Add upgrade support for CephRGW service
Implements minor upgrade of the ceph-radosgw service.

Change-Id: I4c064bf996ec6bb7eba41ab6384bd953a8ec920f
Partially-Implements: blueprint overcloud-upgrades-per-service

--- a/puppet/services/ceph-rgw.yaml
+++ b/puppet/services/ceph-rgw.yaml
@@ -77,3 +77,14 @@ outputs:
           ceph::rgw::keystone::auth::tenant: service
           ceph::rgw::keystone::auth::user: swift
           ceph::rgw::keystone::auth::password: {get_param: SwiftPassword}
+      upgrade_tasks:
+        - name: Gather RGW instance ID
+          tags: step0
+          shell: hiera -c /etc/puppet/hiera.yaml ceph::profile::params::rgw_name radosgw.gateway
+          register: rgw_id
+        - name: Check status
+          shell: /usr/bin/systemctl show ceph-radosgw@{{rgw_id.stdout}} --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
+        - name: Stop RGW instance
+          tags: step1
+          service: name=ceph-radosgw@{{rgw_id.stdout}} state=stopped
